# LLMod

./: .gitignore  README.md  main.py  moderation_test_results.csv  pyproject.toml  repomix-output.txt
config/: config-example.yaml
src/: bot.py  config.py
src/discord/: client.py  commands.py  events.py  responses.py
src/llm/: client.py  moderation.py  prompts.py
src/utils/: conversation_context.py  logging.py  message_queue.py
tests/: run_tests.py
tests/moderation/: test_moderation.py  visualise.py
