[project]
name = "discordllmoderator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "polars (>=1.26.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
